v1.2.0.?
- revised internal send/buffer logic
- when Context.BufferSize is set, don't send header rightaway, and add Content-Length when all of content fits in buffer
- xxmHttp: fixed issue when posting 1MB or more
- demo 03 ADO: switched query store to plain SQL file

v1.1.9.300
- sourceforge repository caught up with previous private repo, so version build number will now follow svn revision number
- support for If-Modified-Since, If-Unmodified-Since headers
- serving content-files uses FILE_FLAG_SEQUENTIAL_SCAN
- xxmHttp: switched to custom winsock wrapper
- xxmHttp: central holding for 'keep' connections awaiting requests
- xxmLocal: fixed issue with first request for a static file after reload
- fixed issue with multi-byte ANSI encodings

v1.1.8.295
- optional project interface: IXxmProjectEvents1
- parser values: $l replaced by source line number, $v by current, $d by default
- set project default parser values from Web.xxmp
- xxmHttp: replaced first request parsing ReceiveLn with ReceiveBuf
- xxmHttp,xxmHost,xxmHSys: 'threads' option to set thread pool size
- added mongodb demo: "03 Data MongoDB"
- xxmConv: extra proto template fields (used by 'skip the handler' builds)
- xxmConv: /nolinemaps option
- signatures file "Web.xxmp.~db" changed to "src\xxmp.~db"
- fixed issue with access denied on loadcopy under load

v1.1.7.292
- xxmString: TStringContext.SaveToFile respects AutoEncoding parameter
- xxm.xml project registry revised, MSXML now only used for parsing.
- project registries use CompareText instead of comparing LowerCase'd strings
- 'embed HTML syntax': now supports start characters e.g. <p>>=i<</p> instead of <p>[[=i]]</p>
- xxmProject include unit files dialog supports multi-select
- xxmIsapi: fixed Redirect with https
- xxmHSys: support for https (pass argument "SecurePort=")
- xxmHSys2: support for HTTPAPI 2.0

v1.1.6.288
- security: EOL's in added header fields are disallowed
- fixed issue with URLEncoded and UTF8 encoded characters