@@ -3,6 +3,7 @@ v1.2.0.?
 - when Context.BufferSize is set, don't send header rightaway, and add Content-Length when all of content fits in buffer
 - xxmHttp: fixed issue when posting 1MB or more
 - demo 03 ADO: switched query store to plain SQL file
+- AutoBuild: errors shown on local path to xxm file instead of .pas filename
 
 v1.1.9.300
 - sourceforge repository caught up with previous private repo, so version build number will now follow svn revision number
